Smaller and more pronunced nav-bar

--- a/templates/main-body.html
+++ b/templates/main-body.html
@@ -40,7 +40,7 @@
 		<!--======================-->
 		<nav class="navbar navbar-expand-lg">
 			<!-- Visual Peer Review Logo -->
-			<a class="navbar-brand" href="#"><img src="../assets/img/Logo_Logo-Nav-80.png" alt="Visual Peer Review Logo" height="80px"></a>
+			<a class="navbar-brand" href="#"><img class="logo" src="../assets/img/Logo_Logo-Nav-80.png" alt="Visual Peer Review Logo"></a>
 
 			<!-- Small-width screen menu button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
