--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,11 +85,11 @@ h1 {
 /* Navigation Element */
 .navbar {
 	/* Spacing */
-	margin: 0;
-	padding-left: 30px;
-	padding-right: 30px;
-	padding-top: 10px;
-	padding-bottom: 50px;
+	margin: 0 0 40px;
+	padding: 10px 30px;
+		
+	/*  Drop-Shadow Effect */
+	box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
 
 /* Navigation Item */
@@ -114,7 +114,10 @@ h1 {
 	color: var(--primary);
 }
 
-
+/* Logo */
+.logo {
+	height: 50px;
+}
 
 
 /* ==================================================================================  */
