--- a/templates/single-focus.html
+++ b/templates/single-focus.html
@@ -3,9 +3,9 @@
 	======================
 	Visual Peer Review
 	---------------------
-	main-body.html
+	single-focus.html
 	---------------------
-	Template: Main-Body Page
+	Template: Single-Focus Page
 -->
 
 <html>
@@ -13,7 +13,7 @@
 		<!-- Page Meta Tags -->
 		<!--======================-->
 		<meta charset="UTF-8">
-		<title>Visual Peer Review | Main-Body Page</title>
+		<title>Visual Peer Review | Single-Focus Page</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<!-- Bootstrap CDN  -->
@@ -24,6 +24,7 @@
 		<!--======================-->
 		<link rel="stylesheet" href="../assets/css/main.css">
 		<link rel="stylesheet" href="../assets/css/color-purple.css">
+		<link rel="stylesheet" href="../assets/css/focus.css">
 		
 		<!-- Typefaces -->
 		<!--======================-->
@@ -72,30 +73,16 @@
 
 		<!-- Page Body -->
 		<!--======================-->
-		<div class="container">
+		<div class="container single-focus">
 			<!-- Row -->
 			<div class="row">
 				<!-- Full-Width -->
 				<div class="col-12">
-					<h1>Main-Body Page</h1>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-					<h2>Sub-Heading</h2>
-					<h3>Sub-Heading</h3>
-					<h4>Sub-Heading</h4>
-				</div>
-			</div>
-
-			<!-- Row -->
-			<div class="row space-section">
-				<!-- Half-Width -->
-				<div class="col-12 col-md-6">
-					<h1>Half-Width</h1>
-					<p>This column is half-width. On meduim sized screens and larger, it fills half of the container space. In smaller sized screens it fills the entire container width.</p>
-				</div>
-				<!-- Half-Width -->
-				<div class="col-12 col-md-6">
-					<h1>Half-Width</h1>
-					<p>This column is half-width. On meduim sized screens and larger, it fills half of the container space. In smaller sized screens it fills the entire container width.</p>
+					<!-- Focus Icon -->
+					<i class="focus-icon fas fa-exclamation-circle"></i>
+					
+					<h1>Single Focus Page</h1>
+					<p>This page focuses on a single item.</p>
 				</div>
 			</div>
 		</div>
