--- a/templates/dual-focus.html
+++ b/templates/dual-focus.html
@@ -73,16 +73,24 @@
 
 		<!-- Page Body -->
 		<!--======================-->
-		<div class="container single-focus">
+		<div class="container dual-focus">
 			<!-- Row -->
 			<div class="row no-gutters">
-				<!-- Full-Width -->
-				<div class="col-12">
+				<!-- Half-Width -->
+				<div class="col-12 col-md-6">
 					<!-- Focus Icon -->
 					<i class="focus-icon fas fa-exclamation-circle"></i>
 					
-					<h1>Single Focus Page</h1>
-					<p>This page focuses on a single item.</p>
+					<h1>Dual Focus Page</h1>
+					<p>This page focuses on two items.</p>
+				</div>
+				<!-- Half-Width -->
+				<div class="col-12 col-md-6">
+					<!-- Focus Icon -->
+					<i class="focus-icon fas fa-exclamation-circle"></i>
+					
+					<h1>Dual Focus Page</h1>
+					<p>This page focuses on two items.</p>
 				</div>
 			</div>
 		</div>
