Dual Focus Template

--- a/templates/dual-focus.html
+++ b/templates/dual-focus.html
@@ -3,9 +3,9 @@
 	======================
 	Visual Peer Review
 	---------------------
-	single-focus.html
+	dual-focus.html
 	---------------------
-	Template: Single-Focus Page
+	Template: Dual-Focus Page
 -->
 
 <html>
