--- a/templates/dual-focus.html
+++ b/templates/dual-focus.html
@@ -75,17 +75,20 @@
 		<!--======================-->
 		<div class="container dual-focus">
 			<!-- Row -->
-			<div class="row no-gutters">
-				<!-- Half-Width -->
-				<div class="col-12 col-md-6">
+			<div class="row">
+				
+				<!-- SECTION ONE: -->
+				<div class="section-one col-12 col-md-6">
 					<!-- Focus Icon -->
 					<i class="focus-icon fas fa-exclamation-circle"></i>
 					
 					<h1>Dual Focus Page</h1>
 					<p>This page focuses on two items.</p>
 				</div>
-				<!-- Half-Width -->
-				<div class="col-12 col-md-6">
+				
+				
+				<!-- SECTION TWO: -->
+				<div class="section-two col-12 col-md-6">
 					<!-- Focus Icon -->
 					<i class="focus-icon fas fa-exclamation-circle"></i>
 					
