--- a/assets/css/focus.css
+++ b/assets/css/focus.css
@@ -86,7 +86,7 @@
 		
 		/* Partition border between sections */
 		border-left: thin solid;
-		border-color: var(--offset);
+		border-color: rgba(0,0,0,.2);
 	}
 }
 
