--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,6 +135,11 @@ h1 {
 	color: var(--secondary);
 }
 
+/* User Hello Message */
+.user-hello {
+	color: var(--offset);
+}
+
 
 
 /* ==================================================================================  */
@@ -252,4 +257,11 @@ footer a:hover {
 	font-size: smaller;
 	padding-left: 1.5em;
 	vertical-align: middle;
+}
+
+.proj-title {
+	padding-bottom: 0.5em;
+	font-size: larger;
+	color: var(--offset);
+	font-weight: 400;
 }
